primeiro projeto 4ndredev

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevLinks</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>REDES SOCIAIS DARK/LIGHT</title>
+    <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img
-          src="./Assets/profile.png.png"
-          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
+          src="./Assets/profile.png"
+          alt=" André em frente ao pc e um microfone sem camiseta "
         />
-        <p>@maykbrito</p>
+        <p>PRIMEIRO PROJETO</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -31,45 +31,45 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="#">INSTAGRAM</a>
         </li>
 
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="#">FACEBOOK</a>
         </li>
 
         <li>
-          <a href="https://github.com/maykbrito">Ver meu portfólio</a>
+          <a href="#">Git-HUB</a>
         </li>
 
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o Explorer</a
+          <a href="https://www.linkedin.com/in/4ndredev/" target="_blank"
+            >LINKEDIN</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
+            <!-- LINK DESATIVADO APENAS ENFEITE-->
+        <a ="#" target="_blank">
+          <ion-icon name="arrow-redo-outline"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/maykbrito" target="_blank">
-          <ion-icon name="logo-instagram"></ion-icon>
+        <a href="#" target="_blank">
+          <ion-icon name="logo-discord"></ion-icon>
         </a>
-
-        <a href="https://youtube.com/maykbrito" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
-          <ion-icon name="logo-linkedin"></ion-icon>
+                    <!-- LINK DESATIVADO -->
+          <a ="#" target="_blank">
+          <ion-icon name="arrow-undo-outline"></ion-icon>
         </a>
       </div>
 
-      <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
+     <!-- AGRADECIMENTOS A ROCKESEAT QUE ME PROPOS ESSE CURSO MARAVILHOSO E ESTÁ MUDANDO A MINHA VIDA , 5 DIA DE CURSO HOJE! -->
+      
+     <footer>
+       <h1>Agradecimentos a</p><a href="https://rocketseat.com.br/ "target=_blank >Rocketseat</a> <ion-icon name="rocket-outline"></ion-icon>
       </footer>
-    </div>
+     
+  </div>
 
     <script
       type="module"
@@ -80,6 +80,6 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
