--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>REDES SOCIAIS DARK/LIGHT</title>
+    <title>Link das Redes desativado</title>
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
