--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Link das Redes desativado</title>
+    <title>REDES SOCIAIS COM UM CLICK</title>
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
@@ -21,7 +21,7 @@
           src="./Assets/profile.png"
           alt=" André em frente ao pc e um microfone sem camiseta "
         />
-        <p>PRIMEIRO PROJETO</p>
+        <p></p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -31,15 +31,15 @@
 
       <ul>
         <li>
-          <a href="#">INSTAGRAM</a>
+          <a href="https://www.instagram.com/4ndre.dev/" target="_blank>INSTAGRAM</a>
         </li>
 
         <li>
-          <a href="#">FACEBOOK</a>
+          <a href="https://discord.com/channels/@me" target=_blank >DISCORD</a>
         </li>
 
         <li>
-          <a href="#">Git-HUB</a>
+          <a href="https://github.com/4ndredev" target="_blank>GitHub</a>
         </li>
 
         <li>
